went to tutoring, got a lot fixed. going to find where I am calling create task list again and probably submit to move on to the next module.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -35,14 +35,14 @@
           </div>
           <div class="modal-body">
 
-              <input type ="text" name="name" id="name">
-
-              <textarea id="textarea" rows="4" cols = "30"></textarea>
+              <input type ="text" name="name" id="nTask">
+              <div id="dueDate"></div>
+              <textarea id="description" rows="4" cols = "30"></textarea>
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Understood</button>
+           <button id="submit-button" type="button" class="btn btn-secondary" data-bs-dismiss="modal">Save</button>
+            
           </div>
         </div>
       </div>
