--- a/Develop/index.html
+++ b/Develop/index.html
@@ -56,7 +56,7 @@
             <h2 class="card-title mb-1">To Do</h2>
           </div>
           <div class="card-body bg-light">
-            <div id="todo-cards"></div>
+            <div id="todo-cards" class="task-card"></div>
           </div>
         </div>
       </div>
@@ -66,7 +66,7 @@
             <h2 class="card-title mb-1">In Progress</h2>
           </div>
           <div class="card-body bg-light">
-            <div id="in-progress-cards"></div>
+            <div id="in-progress-cards" class="task-card"></div>
           </div>
         </div>
         </div>
@@ -76,7 +76,7 @@
               <h2 class="card-title mb-1">Done</h2>
             </div>
             <div class="card-body bg-light">
-              <div id="done-cards"></div>
+              <div id="done-cards" class="task-card"></div>
           </div>
           </div>
       </div>
